Footer alignment fix 🐛, Current price change difference 🎊 + Icons 🎈

--- a/src/index.scss
+++ b/src/index.scss
@@ -10,3 +10,10 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.mt-3 {
+  margin-top: 3px;
+}
+.w2 {
+  width: 2rem;
+}
